--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -1,4 +1,4 @@
-/* $Id: drupal.css,v 1.147.2.3 2006/06/30 00:13:45 unconed Exp $ */
+/* $Id: drupal.css,v 1.147.2.8 2006/12/14 20:20:21 killes Exp $ */
 
 /*
 ** HTML elements
@@ -137,7 +137,7 @@ tr.odd .form-item, tr.even .form-item {
   margin-bottom: 0;
   white-space: nowrap;
 }
-.form-item input.error, .form-item textarea.error {
+.form-item input.error, .form-item textarea.error, .form-item select.error {
   border: 2px solid red;
 }
 .form-item .description {
@@ -238,15 +238,25 @@ tr.odd .form-item, tr.even .form-item {
   border-bottom: 1px solid #888;
   text-align: center;
   padding: 0.5em;
+  width:98%;
 }
 .book-navigation .page-previous {
   text-align: right;
+  width: 42%;
+  display: block;
+  float: left;
 }
 .book-navigation .page-up {
-  margin: 0 4em;
+  margin: 0 5%;
+  width: 4%;
+  display: block;
+  float: left;
 }
 .book-navigation .page-next {
   text-align: left;
+  width: 42%;
+  display: block;
+  float: left;
 }
 .node-unpublished, .comment-unpublished {
   background-color: #fff4f4;
@@ -307,13 +317,17 @@ tr.odd .form-item, tr.even .form-item {
   border-bottom: 1px solid #888;
   text-align: center;
   padding: 0.5em;
+  width: 98%;
 }
 .forum-topic-navigation .topic-previous {
-  margin-right: 4em;
   text-align: right;
+  float: left;
+  width: 46%;
 }
 .forum-topic-navigation .topic-next {
   text-align: left;
+  float: right;
+  width: 46%;
 }
 .locale-untranslated {
   font-style: normal;
@@ -576,6 +590,7 @@ ul.secondary a.active {
   position: absolute;
   border: 1px solid;
   overflow: hidden;
+  z-index: 100;
 }
 #autocomplete ul {
   margin: 0;
