--- a/themes/bluemarine/style.css
+++ b/themes/bluemarine/style.css
@@ -1,4 +1,4 @@
-/* $Id: style.css,v 1.13 2006/04/03 22:20:48 unconed Exp $ */
+/* $Id: style.css,v 1.13.2.2 2007/01/04 21:19:48 killes Exp $ */
 
 /*
 ** HTML elements
@@ -237,7 +237,7 @@ table {
 .node .taxonomy {
   color: #999;
   font-size: 0.8em;
-  padding: 1.5em;
+  padding-left: 1.5em;
 }
 .node .picture {
   border: 1px solid #ddd;
@@ -343,6 +343,8 @@ table {
 }
 .calendar .day-selected {
   background-color: #369;
+}
+.calendar .day-selected a {
   color: #fff;
 }
 .calendar .header-week {
