--- a/sites/all/modules/xmlsitemap/gss/gss.css
+++ b/sites/all/modules/xmlsitemap/gss/gss.css
@@ -1,4 +1,4 @@
-/* $Id: gss.css,v 1.1 2007/11/09 17:56:05 darrenoh Exp $ */
+/* $Id: gss.css,v 1.1.6.3 2009/06/12 14:34:45 earnie Exp $ */
 
 body {
   margin-top: 0;
@@ -73,7 +73,7 @@ a:visited {
 
 .sortup {
   background-position: right center;
-  background-image: url(sortup.gif);
+  background-image: url(/misc/arrow-asc.png);
   background-repeat: no-repeat;
   font-style: italic;
   white-space: pre;
@@ -81,7 +81,7 @@ a:visited {
 
 .sortdown {
   background-position: right center;
-  background-image: url(sortdown.gif);
+  background-image: url(/misc/arrow-desc.png);
   background-repeat: no-repeat;
   font-style: italic;
   white-space: pre;
