--- a/sites/all/modules/comment_notify/comment_notify-rtl.css
+++ b/sites/all/modules/comment_notify/comment_notify-rtl.css
@@ -1,14 +1,4 @@
-/* $Id: comment_notify-rtl.css,v 1.1 2009/03/31 23:27:26 greggles Exp $ */
-#edit-notify-type-1-wrapper, #edit-notify-type-2-wrapper {
-  float: right;
-}
-
-#edit-notify-type-1-wrapper {
-  margin-left: 0em;
-  margin-right: 2em;
-}
-
-#edit-notify-type-2-wrapper {
-  margin-left: 0em;
-  margin-right: 1em;
+#edit-notify-type .form-item-notify-type {
+  margin-left: 0;
+  margin-right: 1.5em;
 }
